--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,22 @@ project(geosim_project)
 add_library(geosim_core 
     src/FlatSurface.cpp
     src/Solver.cpp
+    
+    # Заголовки
+    src/ISurface.h
+    src/Solver.h
+    src/FlatSurface.h
+)
+
+add_executable(test_app
+    src/FlatSurface.cpp
+    src/Solver.cpp
+    src/TestExecutable/main.cpp
+    
+    # Заголовки
+    src/ISurface.h
+    src/Solver.h
+    src/FlatSurface.h
 )
 
 target_include_directories(geosim_core 
@@ -15,3 +31,8 @@ target_include_directories(geosim_core
 	externals/eigen
 )
 
+target_include_directories(test_app 
+    PUBLIC 
+        src
+	externals/eigen
+)
